execution_engine/check_err.txt
    Checking crossbeam-epoch v0.9.18
    Checking crossbeam-queue v0.3.12
    Checking crossbeam-channel v0.5.15
    Checking crossbeam-deque v0.8.6
    Checking crossbeam v0.8.4
    Checking execution_engine v0.1.0 (C:\Users\gabri\bongus\bongus_trading_bot\execution_engine)
error[E0425]: cannot find type `TcpStream` in this scope
   --> src\binance_ws.rs:160:95
    |
160 |     async fn handle_server_shutdown(&mut self, ws_stream: &mut WebSocketStream<MaybeTlsStream<TcpStream>>) {
    |                                                                                               ^^^^^^^^^ not found in this scope
    |
help: consider importing one of these structs
    |
  1 + use std::net::TcpStream;
    |
  1 + use tokio::net::TcpStream;
    |

warning: unused variable: `symbol`
   --> src\order_manager.rs:109:36
    |
109 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                    ^^^^^^ help: try ignoring the field: `symbol: _`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `bids`
   --> src\order_manager.rs:109:44
    |
109 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                            ^^^^ help: try ignoring the field: `bids: _`

warning: unused variable: `asks`
   --> src\order_manager.rs:109:50
    |
109 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                                  ^^^^ help: try ignoring the field: `asks: _`

For more information about this error, try `rustc --explain E0425`.
warning: `execution_engine` (bin "execution_engine") generated 3 warnings
error: could not compile `execution_engine` (bin "execution_engine") due to 1 previous error; 3 warnings emitted
